--- a/src/composer.json
+++ b/src/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Root\\Html\\": "src/"
+            "App\\": "app/"
         }
     },
     "authors": [
