Major Update Add Template Engine Add Helpers Add Route Naming

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   php:
     build: .
     container_name: novacraft_php
+    user: "${UID}:${GID}"
     volumes:
       - "${LOCAL_PATH}:/var/www/html"
     environment:
