--- a/src/package.json
+++ b/src/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "npx tailwindcss -i ./css/input.css -o ./css/output.css --watch",
-    "build": "npx tailwindcss -i ./css/input.css -o ./css/output.css"
+    "watch": "npx tailwindcss -i ./public/css/input.css -o ./public/css/app.css --watch",
+    "build": "npx tailwindcss -i ./public/css/input.css -o ./public/css/app.css --minify"
   },
   "keywords": [],
   "author": "",
