--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,8 @@
 server {
     listen 80;
     index index.php index.html;
-    root /var/www/html;
+
+    root /var/www/html/public;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -11,7 +12,8 @@ server {
         include fastcgi_params;
         fastcgi_pass php:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
+
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     location ~ /\.ht {
