--- a/src/composer.json
+++ b/src/composer.json
@@ -3,7 +3,8 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Foundations\\": "foundations/"
         }
     },
     "authors": [
