Establich Connection With DataBase

--- a/src/.env.example
+++ b/src/.env.example
@@ -3,6 +3,6 @@ APP_NAME="Mavel"
 DATABASE_DRIVER="pgsql"
 DATABASE_HOST="localhost"
 DATABASE_PORT=5432
-DATABASE_DB="mavel"
+DATABASE_NAME="mavel"
 DATABASE_USER="mavel"
 DATABASE_PASSWORD="mavel"
