--- a/src/composer.json
+++ b/src/composer.json
@@ -12,5 +12,7 @@
             "name": "Badr Eddine Slaoui"
         }
     ],
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    }
 }
