--- a/src/composer.json
+++ b/src/composer.json
@@ -4,6 +4,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Database\\": "database/",
             "Foundations\\": "foundations/"
         }
     },
