Update nginx Config To Prevent Style Caching

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,4 +19,10 @@ server {
     location ~ /\.ht {
         deny all;
     }
+
+    location ~* \.css$ {
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
+        etag off;
+    }
 }
